--- a/src/views/genresList.ejs
+++ b/src/views/genresList.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>listado de Generos</title>
+    <title>Listado de géneros</title>
     <link rel='stylesheet' href='/css/style.css' />
 
 </head>
@@ -13,7 +13,7 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
-    <h1>LISTADO DE GENEROS</h1>
+    <h1>LISTADO DE GÉNEROS</h1>
     <ul>
         <% for( let i = 0; i < genres.length; i++ ) { %>
         <li>
